--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "react-scripts": "4.0.3"
   },
   "browserslist": {
