--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@apollo/client": "^3.3.16",
     "bulma": "0.9.2",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0"
